Added support for LP, disconnect, and to display error messages